Nav section done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PH flower Shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Online Flower Market</title>
+
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+  <link rel="stylesheet" href="styles/tailwind.css">
+  <link rel="stylesheet" href="styles/styles.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+
+<body class="font-inter">
+  <header class="container">
+    <!-- Nav Section -->
+    <nav class="nav-section flex mt-[30px] mb-[226px] justify-between items-center ">
+      <img src="assets/logo.png" alt="Logo Picture">
+      <div class="flex gap-12">
+        <ul class="hidden md:flex justify-between gap-12">
+          <li class="font-bold"><a href="">Home</a></li>
+          <li class="nav-t-c"><a href="">Shop</a></li>
+          <li class="nav-t-c"><a href="">About Us</a></li>
+        </ul>
+        <button class=""><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</button>
+      </div>
+    </nav>
     
-</body>
-</html>
