Banner Portion done

--- a/index.html
+++ b/index.html
@@ -30,4 +30,18 @@
         <button class=""><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</button>
       </div>
     </nav>
+    <!-- Banner -->
+    <section class="banner-section flex justify-between items-end ">
+      <div class="">
+        <h1 class="font-noto font-bold text-6xl
+        ">ALWAYS <span class=" text-[#E95A08]">FRESH</span></h1>
+        <h1 class="font-noto font-bold text-6xl text-[#E95A08]">FLOWERS</h1>
+        <p class="text-lg text-black/50">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+          From classic
+          roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+      </div>
+      <img src="assets/hero-flower.png" alt="Banner Flower">
+    </section>
+  </header>
+  <main>
     
