Plant,card,plant lover portion add  in my code

--- a/index.html
+++ b/index.html
@@ -44,4 +44,89 @@
     </section>
   </header>
   <main>
+    <!-- Plants Section -->
+    <section class="container text-center">
+      <h2 class="font-noto font-bold text-5xl mt-32 mb-4 p-sec-titile"><span class="text-[#E95A08]">Our</span> Plants
+      </h2>
+      <p class="text-black/50 text-lg mb-12 p-section">Indulge your senses with the beauty and fragrance of our fresh
+        flower shop.
+        From classic roses to
+        exotic blooms, we
+        offer a wide variety of fresh.</p>
+      <!-- Card -->
+      <div class="card-section place-items-center grid grid-cols-2 lg:grid-cols-4 gap-x-5 gap-y-7">
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+        <div class="card max-w-[270px]">
+          <img src="assets/sample-flower-image.png" alt="Flower Picture">
+          <p class="font-medium text-[22px] mt-5">Lily Blossom</p>
+          <p class="font-bold text-[22px]">20 USD</p>
+          <button class="mt-4 bg-[#E95A08] text-white w-full h-[50px] font-semibold text-[16px]">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
+    <!-- Plants Lover Section -->
+    <section class="container">
+      <div class="relative flex love-section justify-between gap-14.5 mt-52 mb-36">
+        <img class="w-full" src="assets/flower-store.png" alt="Flower Picture">
+        <img class="trusted-badge hidden md:block lg:absolute lg:w-[286px] lg:h-[286px] lg:right-125 lg:bottom-110" src="assets/trusted-badge.png" alt="Trusted Badge">
+        <div class="">
+          <h2 class="text-5xl font-bold font-noto mb-7">Flower & Plants Lover</h2>
+          <ul class="text-[22px] text-black/50 list-disc pl-10">
+            <li class="pt-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+              roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</li>
+            <li class="pt-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+              roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</li>
+            <li class="pt-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+              roses to exotic
+              blooms, we
+              offer a wide variety of fresh.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
     
