Now i add styles portion

--- a/index.html
+++ b/index.html
@@ -129,4 +129,73 @@
         </div>
       </div>
     </section>
-    
+    <!-- Latest  Deals -->
+    <section class="container">
+      <h2 class="deals-h2 font-noto font-bold text-5xl text-center"><span class="text-[#E95A08]">Latest</span> Deals</h2>
+      <p class="deals-p text-[22px] text-black/50 text-center w-[75%] mx-auto mt-4 mb-28">Indulge your senses with the
+        beauty
+        and fragrance of our fresh flower shop. From classic
+        roses to exotic blooms, we offer a wide variety of fresh.</p>
+      <div class="deals mb-32 text-white grid grid-cols-[1fr_2fr] gap-x-[28px] gap-y-[25px]">
+        <div
+          class="heigh grid place-content-center bg-[linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(assets/deal-bloom.png)] rounded-lg bg-cover bg-center py-16">
+          <h3 class="font-noto text-[20px]">60% Off | Bloom Plant</h3>
+          <button class="font-semibold underline">Shop Now</button>
+        </div>
+        <div
+          class="heigh row-span-2 grid place-content-center bg-[linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(assets/deal-zabo.png)] bg-cover bg-no-repeat rounded-lg">
+          <h3 class="font-noto font-bold text-4xl">25% Off | Zabo Plant</h3>
+          <h3 class="font-noto font-bold text-4xl pb-2">25% Off | Zabo Plant</h3>
+          <button class="font-semibold underline">Shop Now</button>
+        </div>
+        <div
+          class="heigh grid place-content-center bg-[linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(assets/deal-ana.png)] rounded-lg bg-cover bg-center py-16">
+          <h3 class="font-noto text-[20px]">30% Off | Ana Plant</h3>
+          <button class="font-semibold underline">Shop Now</button>
+        </div>
+
+      </div>
+    </section>
+    <!-- Join Section -->
+    <section class=" bg-[url(assets/news-letter-bg.png)] bg-no-repeat bg-center w-full h-[533px] mx-auto">
+      <div class="container mx-auto">
+        <h2 class="join-h2 font-noto font-bold text-white text-5xl text-center pt-[15%] mb-6">Join the colorful Bunch
+        </h2>
+        <div class="join-flex flex justify-center w-[830px] mx-auto">
+          <input class="bg-white w-full h-12 pl-2.5" type="email" placeholder="Write email">
+          <button class="text-white h-12 px-12 font-semibold bg-[#E95A08] ">Subscribe</button>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- Footer Section -->
+  <footer class="bg-white/50 border-black/50">
+    <div class="max-w-[70rem] footer-section flex justify-between py-12 mx-auto">
+      <div class="">
+        <img src="assets/logo.png" alt="Logo Picture" class="mb-4">
+        <p class="text-black/50 w-[350px]">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+        </p>
+      </div>
+      <ul>
+        <li class="text-gray-500 mb-8"><a href="">Home</a></li>
+        <li class="text-gray-500 mb-8"><a href="">About Us</a></li>
+        <li class="text-gray-500 mb-8"><a href="">Blog</a></li>
+        <li class="text-gray-500 mb-8"><a href="">FAQ</a></li>
+        <li class="text-gray-500 mb-8"><a href="">Contact Us</a></li>
+      </ul>
+      <ul>
+        <li class="text-gray-500 mb-8"><a href="">Features</a></li>
+        <li class="text-gray-500 mb-8"><a href="">Pricing</a></li>
+        <li class="text-gray-500 mb-8"><a href="">Privacy Policy</a></li>
+        <li class="text-gray-500 mb-8"><a href="">trams of Service</a></li>
+        <li class="text-gray-500 mb-8"><a href="">Help Center</a></li>
+      </ul>
+      <div class="flex gap-6">
+        <img class="w-8 h-8" src="assets/icon-linkedin.png" alt="Linkedin">
+        <img class="w-9 h-8" src="assets/icon-twitter.png" alt="Twitter">
+        <img class="w-8 h-8" src="assets/icon-facebook.png" alt="Facebook">
+        <img class="w-8 h-8" src="assets/icon-youtube.png" alt="Youtube">
+      </div>
+    </div>
+  </footer>
+</body>
