--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Flower Market</title>
+  <title>PH | Flower Shop</title>
+  <link rel="shortcut icon" href="flower shop logo.png" type="image/x-icon">
 
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
@@ -18,7 +19,10 @@
 
 <body class="font-inter">
   <header class="container">
-    <!-- Nav Section -->
+
+    <!--============ Nav section =============-->
+
+
     <nav class="nav-section flex mt-[30px] mb-[226px] justify-between items-center ">
       <img src="assets/logo.png" alt="Logo Picture">
       <div class="flex gap-12">
@@ -30,7 +34,11 @@
         <button class=""><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</button>
       </div>
     </nav>
-    <!-- Banner -->
+
+
+    <!--================ Banner section =================-->
+
+
     <section class="banner-section flex justify-between items-end ">
       <div class="">
         <h1 class="font-noto font-bold text-6xl
@@ -44,7 +52,11 @@
     </section>
   </header>
   <main>
-    <!-- Plants Section -->
+
+
+    <!--=============== Plants section =============-->
+
+
     <section class="container text-center">
       <h2 class="font-noto font-bold text-5xl mt-32 mb-4 p-sec-titile"><span class="text-[#E95A08]">Our</span> Plants
       </h2>
@@ -53,7 +65,11 @@
         From classic roses to
         exotic blooms, we
         offer a wide variety of fresh.</p>
-      <!-- Card -->
+
+
+      <!--============== Card section ===============-->
+
+
       <div class="card-section place-items-center grid grid-cols-2 lg:grid-cols-4 gap-x-5 gap-y-7">
         <div class="card max-w-[270px]">
           <img src="assets/sample-flower-image.png" alt="Flower Picture">
@@ -105,7 +121,11 @@
         </div>
       </div>
     </section>
-    <!-- Plants Lover Section -->
+
+
+    <!--============== Plants Lover section ==========-->
+
+
     <section class="container">
       <div class="relative flex love-section justify-between gap-14.5 mt-52 mb-36">
         <img class="w-full" src="assets/flower-store.png" alt="Flower Picture">
@@ -129,7 +149,11 @@
         </div>
       </div>
     </section>
-    <!-- Latest  Deals -->
+
+
+    <!--============== Latest  Deals =================-->
+
+
     <section class="container">
       <h2 class="deals-h2 font-noto font-bold text-5xl text-center"><span class="text-[#E95A08]">Latest</span> Deals</h2>
       <p class="deals-p text-[22px] text-black/50 text-center w-[75%] mx-auto mt-4 mb-28">Indulge your senses with the
@@ -156,7 +180,11 @@
 
       </div>
     </section>
-    <!-- Join Section -->
+
+
+    <!--=============== Join section ===============-->
+
+
     <section class=" bg-[url(assets/news-letter-bg.png)] bg-no-repeat bg-center w-full h-[533px] mx-auto">
       <div class="container mx-auto">
         <h2 class="join-h2 font-noto font-bold text-white text-5xl text-center pt-[15%] mb-6">Join the colorful Bunch
@@ -168,7 +196,11 @@
       </div>
     </section>
   </main>
-  <!-- Footer Section -->
+
+
+  <!--============== Footer section ================-->
+
+
   <footer class="bg-white/50 border-black/50">
     <div class="max-w-[70rem] footer-section flex justify-between py-12 mx-auto">
       <div class="">
